	PR c++/71516 	* decl.c (complete_vars): Handle gracefully type == error_mark_node.

* g++.dg/init/pr71516.C: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@237445 138bc75d-0d04-0410-961f-82ee72b054a4